# conda-package-streaming

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HOW_WE_USE_GITHUB.md  LICENSE  Makefile  README.md  SConstruct  autodoc.html  extract.html  fetch_metadata.html  fetch_s3.html  genindex.html  index.html  lazy_wheel.html  modules.html  noxfile.py  objects.inv  package_streaming.html  py-modindex.html  pyproject.toml  requirements.txt  s3.html  search.html  searchindex.js  transmute.html  url.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
.github/workflows/: main.yml  pypi.yml  sphinx.yml  tests.yml
_sources/: fetch_metadata.rst.txt  index.md.txt  index.rst.txt  modules.md.txt  package_streaming.rst.txt  url.rst.txt
conda.recipe/: meta.yaml
conda_package_streaming/: conda_fmt.py  create.py  exceptions.py  extract.py  fetch_metadata.py  fetch_s3.py  lazy_wheel.py  package_streaming.py  s3.py  test_lazy_wheel.py  transmute.py  url.py
docs/: conda_fmt.rst  conf.py  create.md  extract.rst  index.md  lazy_wheel.md  lazy_wheel.rst  modules.md  modules.rst  requirements.txt  s3.md  transmute.rst
rust-conda/: Cargo.toml  README.md  pyproject.toml
rust-conda/src/: lib.rs  lib.rsx  main.rs
tests/: conftest.py  requirements.txt  server.py  test_degraded.py  test_extract.py  test_fetch.py  test_lazy_wheel.py  test_s3.py  test_streaming.py  test_transmute.py  test_url.py
