[tool.enscons]
name = "conda-package-streaming"
version = "0.0.1"
author = "Anaconda, Inc."
author_email = "conda@anaconda.com"
src_root = ""
description = "Download conda metadata from packages without transferring entire file."
install_requires = [
  "conda-package-handling", # must use conda package, not pypi
  "requests",
]
classifiers = []
keywords = ["packaging"]
license = "BSD-3-Clause"
url = "https://github.com/anaconda-distribution/conda-package-streaming"

[build-system]
requires = ["tomli; python_version<'3.11'", "enscons>=0.28"]
build-backend = "enscons.api"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39']

[tool.isort]
profile = "black"
line_length = 100
