[tool.enscons]
name = "conda-package-streaming"
version = "0.0.2"
author = "Anaconda, Inc."
author_email = "conda@anaconda.com"
src_root = ""
description = "Download conda metadata from packages without transferring entire file."
install_requires = ["requests", "zstandard"]
classifiers = []
keywords = ["packaging"]
license = "BSD-3-Clause"
url = "https://github.com/anaconda-distribution/conda-package-streaming"

[build-system]
requires = ["tomli; python_version<'3.11'", "enscons>=0.28"]
build-backend = "enscons.api"

[tool.black]
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
