[tool.black]
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "conda_package_streaming"
authors = [
  { name = "Anaconda, Inc. & Contributors", email = "conda@continuum.io" },
]
description = "An efficient library to read from new and old format .conda and .tar.bz2 conda packages."
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = ["requests", "zstandard >=0.15"]

[project.optional-dependencies]
test = [
  "pytest >=7",
  "pytest-cov",
  "pytest-mock",
  "boto3",
  "boto3-stubs[essential]",
  "bottle",
  "conda",
  "conda-package-handling >=2",
]
docs = ["furo", "sphinx", "myst-parser", "mdit-py-plugins>=0.3.0"]

[project.urls]
Home = "https://github.com/conda/conda-package-streaming"
Documentation = "https://conda.github.io/conda-package-streaming/"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=conda_package_streaming"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
source = ["conda_package_streaming/", "tests/"]
