[package]
name = "rust-conda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_conda"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
tar = "0.4.38"
zip = { version = "0.6.2", default-features = false } # "deflate" might be needed
zstd = "0.11.2"
